# libft

./: .dir-locals.el  .env  .gitignore  CMakeLists.txt  Makefile  README.md  README.org  compile_commands.json  ft_atoi.c  ft_calloc.c  ft_get_empty_string.c  ft_isalnum.c  ft_isprint.c  ft_itoa.c  ft_memchr.c  ft_memmove.c  ft_memset.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_split.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strncmp.c  ft_strnstr.c  ft_strrchr.c  ft_strtrim.c  ft_substr.c  ft_tolower.c  get_next_line.c  libft.h  testing_frameworks_c_and_cpp.org
chats/: chat_googleTest.org  chat_googleTest2.org  chat_gooleTest_SetupTeardown.org  testing_frameworks_c_and_cpp.org
gtest/: libgmock.so.1.15.2  libgmock_main.so.1.15.2  libgtest.so.1.15.2  libgtest_main.so.1.15.2
includes/: libft.h  test_libft.hpp
src/: ft_abs.c  ft_atoi.c  ft_calloc.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_itoa.c  ft_lstlast.c  ft_lstsize.c  ft_memchr.c  ft_memcpy.c  ft_memmove.c  ft_putchar_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_split.c  ft_strchr.c  ft_strdup.c  ft_strjoin.c  ft_strmapi.c  ft_strncmp.c  ft_strnstr.c  ft_strrchr.c  ft_strtrim.c  ft_substr.c  ft_toupper.c
src_bonus/: ft_lstadd_front.c  ft_lstnew.c  ft_new_function.c
tests/: main.cpp  test_ft_atoi.cpp  test_ft_bzero.cpp  test_ft_calloc.cpp  test_ft_itoa.cpp  test_ft_lstadd_back.cpp  test_ft_lstaddfront.cpp  test_ft_lstlast.cpp  test_ft_lstnew.cpp  test_ft_lstsize.cpp  test_ft_memchr.cpp  test_ft_memcpy.cpp  test_ft_memmove.cpp  (+11 more)
tests.bak/: test_ft_atoi.c  unity.c
(+2 files in other folders)
